--- a/index.html
+++ b/index.html
@@ -96,5 +96,13 @@ Shermerville, IL, USA.</p>
         <h2>Want to make this even better?</h2>
         <p><a href="https://github.com/drench/graceless-degradation">Fork it on github!</a></p>
 
+        <h2 id="donate">Want to help fund further development?</h2>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="4K9XE9Z5URNX8">
+            <input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+
     </body>
 </html>
