Add main site and twitter links

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ activate the plugin in your WordPress console.</p>
 moving parts or sharp edges.</p> 
 
         <h2>Who are you?</h2>
-        <p><strong>Dan Rench</strong>. I'm a <a href="http://dren.ch/portfolio">freelance programmer</a> from
-Shermerville, IL, USA.</p>
+        <p><strong><a href="http://dren.ch/">Dan Rench</a></strong>, a <a href="http://dren.ch/portfolio">freelance programmer</a> from
+Shermerville, IL, USA. Care to <a href="https://twitter.com/kree10">follow me on twitter</a>?</p>
 
         <h2>Want to make this even better?</h2>
         <p><a href="https://github.com/drench/graceless-degradation">Fork it on github!</a></p>
