emphasize a few more things

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ gives visitors still using Internet Explorer 6 an appropriate user experience.
 
         <ul>
             <li><strong class="comicsans">Comic Sans</strong> fonts everywhere!</li>
-            <li>Emphasis tags (bold, italic, strong, and underline) blink!
+            <li>Emphasis tags (bold, italic, strong, and underline) <strong>blink</strong>!
 Even though IE doesn't support the &lt;blink&gt; tag!</li>
-            <li>&lt;hr&gt; tags become animated rainbows! They're not moving in the 2-frame animated gif above, but trust me, they're <strong>animated</strong>.</li>
-            <li>Animated mailbox graphics added to "mailto:" links!</li>
+            <li>&lt;hr&gt; tags become <strong>animated rainbows</strong>! They're not moving in the 2-frame animated gif above, but trust me, they're <strong>animated</strong>.</li>
+            <li><strong>Animated mailbox</strong> graphics added to "mailto:" links!</li>
         </ul>
 
         <h2>Installation is simple!</h2>
