update "fork me" img

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ strong {
 </script>
     </head>
     <body>
-        <a href="https://github.com/drench/graceless-degradation"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets2.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_white_ffffff.png&path=" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/drench/graceless-degradation"><img width="149" height="149" style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
         <h1>Graceless Degradation</h1>
         <h2>Giving IE 6 browsers the experience they demand!</h2>
         <p>
